Fix page being too wide

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
   margin: 0;
   background-color: #352F44;
-  min-width: 100vw;
+  width: 100%;
   min-height: 100vh;
 
   font-family: "Gothic A1", -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -27,7 +27,7 @@ body {
 .fade-exit {
   position: absolute;
   top: 3rem;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   opacity: 1;
@@ -131,7 +131,6 @@ button:disabled {
 .footer {
   position: relative;
   bottom: 0;
-  width: 100vw;
   text-align: center;
   padding-bottom: 20px;
   padding-top: 30px;
